fix: noscript now visible if needs to.

--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,9 @@
+noscript {
+	z-index: 1;
+	position: absolute;
+	font-size: 2rem;
+}
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
